--- a/messages/install.txt
+++ b/messages/install.txt
@@ -8,7 +8,7 @@ Add the following to your Settings - User file and restart Sublime Text after:
 
 {
   "theme": "Sunrise.sublime-theme",
-  "color_scheme":"Packages/Sunrise/Schemes/Sunrise.tmTheme",
+  "color_scheme":"Packages/Sunrise Theme/Scheme/Sunrise.tmTheme",
 }
 
 ==============================================================================================
